// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabbedContent component should match snapshot 1`] = `
<div
  className="tabbed-content"
>
  <div
    className="row"
  >
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title-active ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Thematic 1
        </span>
      </a>
    </div>
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Thematic 2
        </span>
      </a>
    </div>
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Thematic 3
        </span>
      </a>
    </div>
  </div>
  <div
    className="tab-body row"
  >
    <div
      className="box"
    >
      <h2>
        One
         (
        1
        )
      </h2>
      <p>
        If we override the transmitter, we can get to the PNG bus through the solid state RSS alarm!
      </p>
    </div>
  </div>
</div>
`;

exports[`TabbedContent component should match snapshot with bodyRowClassName 1`] = `
<div
  className="tabbed-content"
>
  <div
    className="row"
  >
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title-active ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Thematic 1
        </span>
      </a>
    </div>
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Thematic 2
        </span>
      </a>
    </div>
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Thematic 3
        </span>
      </a>
    </div>
  </div>
  <div
    className="tab-body right row"
  >
    <div
      className="box"
    >
      <h2>
        One
         (
        1
        )
      </h2>
      <p>
        If we override the transmitter, we can get to the PNG bus through the solid state RSS alarm!
      </p>
    </div>
  </div>
</div>
`;

exports[`TabbedContent component should match snapshot with divClassName 1`] = `
<div
  className="tabbed-content right"
>
  <div
    className="row"
  >
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title-active ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Phase 1
        </span>
      </a>
    </div>
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Phase 2
        </span>
      </a>
    </div>
    <div
      className="col-md-4 col-xs-12"
    >
      <a
        className="tab-title ellipsis"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className={undefined}
          style={undefined}
        >
          Phase 3
        </span>
      </a>
    </div>
  </div>
  <div
    className="tab-body row"
  >
    <div
      className="box"
    >
      <h2>
        One
         (
        1
        )
      </h2>
      <p>
        If we override the transmitter, we can get to the PNG bus through the solid state RSS alarm!
      </p>
    </div>
  </div>
</div>
`;
